--- a/packages/libs/coreui/package.json
+++ b/packages/libs/coreui/package.json
@@ -57,6 +57,7 @@
     "@types/react-table": "^7.7.8",
     "@veupathdb/tsconfig": "^1.0.1",
     "babel-loader": "^8.2.2",
+    "chromatic": "^6.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "typescript": "^4.3.5"
