--- a/packages/libs/coreui/package.json
+++ b/packages/libs/coreui/package.json
@@ -16,7 +16,8 @@
     "build-storybook": "build-storybook",
     "build": "rm -rf dist && NODE_ENV=production babel src --ignore \"src/stories/**/*\" --out-dir dist --extensions \".ts,.tsx\" ",
     "tsc": "tsc",
-    "create-svg-icons": "npx @svgr/cli --icon --replace-attr-values \"#000000=currentColor\" --out-dir src/components/icons/ src/assets/svg/ --typescript"
+    "create-svg-icons": "npx @svgr/cli --icon --replace-attr-values \"#000000=currentColor\" --out-dir src/components/icons/ src/assets/svg/ --typescript",
+    "chromatic": "npx chromatic --project-token=52342b8693f6"
   },
   "repository": {
     "type": "git",
