--- a/packages/libs/coreui/package.json
+++ b/packages/libs/coreui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@veupathdb/core-components",
-  "version": "0.10.0",
+  "version": "0.10.1",
   "author": "Michael Dunn <mdunn4@nd.edu>",
   "description": "Core components and style definitions for VEuPath applications.",
   "private": false,
@@ -38,7 +38,8 @@
     "lodash": "^4.17.21",
     "react-cool-dimensions": "^2.0.7",
     "react-responsive-modal": "^6.2.0",
-    "react-table": "^7.7.0"
+    "react-table": "^7.7.0",
+    "@types/react-table": "^7.7.8"
   },
   "devDependencies": {
     "@babel/cli": "^7.14.8",
@@ -55,7 +56,6 @@
     "@svgr/cli": "^6.0.0",
     "@types/lodash": "^4.14.172",
     "@types/mdx": "^2.0.1",
-    "@types/react-table": "^7.7.8",
     "@veupathdb/tsconfig": "^1.0.1",
     "babel-loader": "^8.2.2",
     "chromatic": "^6.2.0",
