--- a/packages/libs/eda/package.json
+++ b/packages/libs/eda/package.json
@@ -8,6 +8,7 @@
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.58",
     "@types/debounce-promise": "^3.1.3",
+    "@types/streamsaver": "^2.0.1",
     "@veupathdb/components": "^0.11.13",
     "@veupathdb/core-components": "^0.11.0",
     "@veupathdb/http-utils": "^1.0.1",
@@ -25,6 +26,7 @@
     "react-router": "^5.2.1",
     "react-router-dom": "^5.3.0",
     "react-table": "^7.7.0",
+    "streamsaver": "^2.0.5",
     "uuid": "^8.3.2"
   },
   "peerDependencies": {
