--- a/packages/sites/mbio-site/package.json
+++ b/packages/sites/mbio-site/package.json
@@ -9,6 +9,9 @@
   "author": "",
   "license": "Apache-2.0",
   "dependencies": {
+    "@veupathdb/components": "^0.11.15",
+    "@veupathdb/core-components": "^0.11.2",
+    "@veupathdb/eda": "^1.3.14",
     "@veupathdb/wdk-client": "^0.5.4",
     "@veupathdb/web-common": "^0.2.1"
   },
