--- a/packages/libs/coreui/package.json
+++ b/packages/libs/coreui/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@veupathdb/core-components",
-  "version": "0.12.1",
+  "name": "@veupathdb/coreui",
+  "version": "0.13.0",
   "author": "Michael Dunn <mdunn4@nd.edu>",
   "description": "Core components and style definitions for VEuPath applications.",
   "private": false,
@@ -21,13 +21,13 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/VEuPathDB/core-components.git"
+    "url": "git+https://github.com/VEuPathDB/CoreUI.git"
   },
   "license": "Apache-2.0",
   "bugs": {
-    "url": "https://github.com/VEuPathDB/core-components/issues"
+    "url": "https://github.com/VEuPathDB/CoreUI/issues"
   },
-  "homepage": "https://github.com/VEuPathDB/core-components#readme",
+  "homepage": "https://github.com/VEuPathDB/CoreUI#readme",
   "dependencies": {
     "@emotion/react": "^11.4.0",
     "@emotion/serialize": "^1.0.2",
@@ -39,6 +39,8 @@
     "react-cool-dimensions": "^2.0.7",
     "react-responsive-modal": "^6.2.0",
     "react-table": "^7.7.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "@types/react-table": "^7.7.8"
   },
   "devDependencies": {
@@ -59,8 +61,6 @@
     "@veupathdb/tsconfig": "^1.0.1",
     "babel-loader": "^8.2.2",
     "chromatic": "^6.2.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
     "typescript": "^4.3.5"
   },
   "peerDependencies": {}
