--- a/packages/libs/eda/package.json
+++ b/packages/libs/eda/package.json
@@ -9,7 +9,7 @@
     "@material-ui/lab": "^4.0.0-alpha.58",
     "@types/debounce-promise": "^3.1.3",
     "@veupathdb/components": "^0.11.15",
-    "@veupathdb/core-components": "^0.12.1",
+    "@veupathdb/coreui": "^0.13.0",
     "@veupathdb/http-utils": "^1.1.0",
     "@veupathdb/study-data-access": "^0.1.5",
     "debounce-promise": "^3.1.2",
