--- a/packages/libs/eda/package.json
+++ b/packages/libs/eda/package.json
@@ -18,6 +18,7 @@
     "lodash": "^4.17.21",
     "monocle-ts": "^2.3.11",
     "react": "^17.0.1",
+    "react-cool-dimensions": "^2.0.7",
     "react-dom": "^17.0.1",
     "react-draggable": "^4.4.3",
     "react-resizable": "^3.0.4",
