--- a/packages/libs/coreui/package.json
+++ b/packages/libs/coreui/package.json
@@ -35,13 +35,13 @@
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@react-hook/size": "^2.1.2",
+    "@types/react-table": "^7.7.8",
     "lodash": "^4.17.21",
-    "react-cool-dimensions": "^2.0.7",
-    "react-responsive-modal": "^6.2.0",
-    "react-table": "^7.7.0",
     "react": "^17.0.2",
+    "react-cool-dimensions": "^2.0.7",
     "react-dom": "^17.0.2",
-    "@types/react-table": "^7.7.8"
+    "react-responsive-modal": "^6.2.0",
+    "react-table": "^7.7.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.14.8",
@@ -51,10 +51,10 @@
     "@babel/preset-typescript": "^7.15.0",
     "@emotion/babel-plugin": "^11.3.0",
     "@emotion/babel-preset-css-prop": "^11.2.0",
-    "@storybook/addon-actions": "^6.4.9",
-    "@storybook/addon-essentials": "^6.4.17",
-    "@storybook/addon-links": "^6.4.9",
-    "@storybook/react": "^6.4.17",
+    "@storybook/addon-actions": "^6.4.19",
+    "@storybook/addon-essentials": "^6.4.19",
+    "@storybook/addon-links": "^6.4.19",
+    "@storybook/react": "^6.4.19",
     "@svgr/cli": "^6.0.0",
     "@types/lodash": "^4.14.172",
     "@types/mdx": "^2.0.1",
@@ -66,6 +66,7 @@
     "eslint": "^8.9.0",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-plugin-storybook": "^0.5.7",
     "typescript": "^4.3.5"
   },
   "peerDependencies": {}
