Use build-npm-modules script to prepare associated npm module for publication

--- a/packages/configs/cra-template/template/.github/workflows/npm-publish.yml
+++ b/packages/configs/cra-template/template/.github/workflows/npm-publish.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Build NPM packages
         run: |
             yarn install
-            yarn build
+            yarn build-npm-modules
       - uses: JS-DevTools/npm-publish@v1
         with:
           token: ${{ secrets.NPM_TOKEN }}
