--- a/packages/libs/coreui/package.json
+++ b/packages/libs/coreui/package.json
@@ -69,5 +69,9 @@
     "eslint-plugin-storybook": "^0.5.7",
     "typescript": "^4.3.5"
   },
-  "peerDependencies": {}
+  "peerDependencies": {},
+  "volta": {
+    "node": "16.14.0",
+    "yarn": "1.22.4"
+  }
 }
