--- a/packages/libs/eda/package.json
+++ b/packages/libs/eda/package.json
@@ -2,33 +2,32 @@
   "name": "@veupathdb/eda",
   "version": "1.8.3",
   "dependencies": {
-    "@emotion/react": "^11.4.1",
-    "@emotion/styled": "^11.3.0",
-    "@material-ui/core": "^4.11.3",
-    "@material-ui/icons": "^4.11.2",
-    "@material-ui/lab": "^4.0.0-alpha.58",
-    "@types/debounce-promise": "^3.1.3",
-    "@veupathdb/components": "^0.11.27",
-    "@veupathdb/coreui": "^0.13.0",
-    "@veupathdb/http-utils": "^1.1.0",
     "debounce-promise": "^3.1.2",
     "fp-ts": "^2.9.3",
     "io-ts": "^2.2.13",
     "lodash": "^4.17.21",
     "monocle-ts": "^2.3.11",
-    "react": "^17.0.1",
     "react-cool-dimensions": "^2.0.7",
-    "react-dom": "^17.0.1",
     "react-draggable": "^4.4.3",
     "react-resizable": "^3.0.4",
-    "react-router": "^5.2.1",
-    "react-router-dom": "^5.3.0",
     "react-table": "^7.7.0",
     "uuid": "^8.3.2"
   },
   "peerDependencies": {
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.58",
+    "@veupathdb/components": "^0.11.27",
+    "@veupathdb/coreui": "^0.13.0",
+    "@veupathdb/http-utils": "^1.1.0",
     "@veupathdb/study-data-access": "^0.2.0",
-    "@veupathdb/wdk-client": ">=0.5.11"
+    "@veupathdb/wdk-client": ">=0.5.11",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-router": "^5.2.1",
+    "react-router-dom": "^5.3.0"
   },
   "sideEffects": [
     "*.scss"
@@ -59,10 +58,16 @@
   ],
   "devDependencies": {
     "@emotion/babel-preset-css-prop": "^11.2.0",
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.58",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/react-hooks": "^5.0.3",
     "@testing-library/user-event": "^12.1.10",
+    "@types/debounce-promise": "^3.1.3",
     "@types/jest": "^26.0.15",
     "@types/lodash": "^4.14.168",
     "@types/node": "^12.0.0",
@@ -72,7 +77,10 @@
     "@types/react-table": "^7.7.9",
     "@types/uuid": "^8.3.0",
     "@veupathdb/browserslist-config": "^1.0.0",
+    "@veupathdb/components": "^0.11.27",
+    "@veupathdb/coreui": "^0.13.0",
     "@veupathdb/eslint-config": "^1.0.0",
+    "@veupathdb/http-utils": "^1.1.0",
     "@veupathdb/prettier-config": "^1.0.0",
     "@veupathdb/react-scripts": "^1.0.1",
     "@veupathdb/study-data-access": "^0.2.0",
@@ -86,6 +94,10 @@
     "lint-staged": ">=10",
     "node-sass": "4",
     "prettier": "2.2.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-router": "^5.2.1",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.1",
     "read": "^1.0.7",
     "script-loader": "^0.7.2",
