move "dependencies" to "{peer,dev}Dependencies"

--- a/packages/libs/wdk-client/package.json
+++ b/packages/libs/wdk-client/package.json
@@ -25,6 +25,30 @@
     "vendored"
   ],
   "dependencies": {
+    "classnames": "^2.2.0",
+    "history": "^4.10.1",
+    "json-stable-stringify": "^1.0.0",
+    "localforage": "^1.5.0",
+    "lodash": "^4.17.5",
+    "mansion-ui": "2.5",
+    "moment": "^2.21.0",
+    "natural-sort": "^1.0.0",
+    "prop-types": "^15.7.2",
+    "react-autocomplete": "^1.8.1",
+    "react-redux": "^7.1.3",
+    "react-select": "^3.0.4",
+    "react-transition-group": "^2.2.1",
+    "redux": "^4.0.0",
+    "redux-observable": "^1.2.0",
+    "reselect": "^3.0.1",
+    "rxjs": "^6.2.2",
+    "spin.js": "^4.0.0",
+    "uuid": "^8.1.0"
+  },
+  "devDependencies": {
+    "@testing-library/react-hooks": "^3.4.2",
+    "@types/jest": "^23.3.1",
+    "@types/shelljs": "^0.8.8",
     "@types/datatables.net": "^1.10.5",
     "@types/flot": "^0.0.31",
     "@types/history": "^4.7.4",
@@ -43,37 +67,9 @@
     "@types/react-router-dom": "^5.1.3",
     "@types/react-select": "^3.0.4",
     "@types/uuid": "^8.0.0",
-    "@veupathdb/components": "^0.11.8",
-    "classnames": "^2.2.0",
-    "history": "^4.10.1",
-    "json-stable-stringify": "^1.0.0",
-    "localforage": "^1.5.0",
-    "lodash": "^4.17.5",
-    "mansion-ui": "2.5",
-    "moment": "^2.21.0",
-    "natural-sort": "^1.0.0",
-    "prop-types": "^15.7.2",
-    "react": "^16.12.0",
-    "react-autocomplete": "^1.8.1",
-    "react-dom": "^16.12.0",
-    "react-redux": "^7.1.3",
-    "react-router": "^5.1.2",
-    "react-router-dom": "^5.1.2",
-    "react-select": "^3.0.4",
-    "react-transition-group": "^2.2.1",
-    "redux": "^4.0.0",
-    "redux-observable": "^1.2.0",
-    "reselect": "^3.0.1",
-    "rxjs": "^6.2.2",
-    "spin.js": "^4.0.0",
-    "uuid": "^8.1.0"
-  },
-  "devDependencies": {
-    "@testing-library/react-hooks": "^3.4.2",
-    "@types/jest": "^23.3.1",
-    "@types/shelljs": "^0.8.8",
     "@typescript-eslint/eslint-plugin": "^4.6.0",
     "@typescript-eslint/parser": "^4.6.0",
+    "@veupathdb/components": "^0.11.8",
     "@veupathdb/react-scripts": "^1.2.0",
     "babel-eslint": "^8.0.1",
     "babel-jest": "^23.1.2",
@@ -83,12 +79,23 @@
     "jest": "^23.4.2",
     "jest-tap-reporter": "^1.9.0",
     "npm-run-all": "^4.1.5",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
     "react-test-renderer": "^16.9.0",
     "shelljs": "^0.8.4",
     "ts-jest": "^23.1.2",
     "ts-node": "^9.0.0",
     "tspath": "^1.3.7",
     "typescript": "^3.7.5"
+  },
+  "peerDependencies": {
+    "@veupathdb/components": "^0.11.8",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2"
   },
   "jest": {
     "moduleNameMapper": {
