--- a/packages/libs/coreui/package.json
+++ b/packages/libs/coreui/package.json
@@ -29,17 +29,9 @@
   },
   "homepage": "https://github.com/VEuPathDB/CoreUI#readme",
   "dependencies": {
-    "@emotion/react": "^11.4.0",
-    "@emotion/serialize": "^1.0.2",
-    "@emotion/styled": "^11.3.0",
-    "@material-ui/core": "^4.12.3",
-    "@material-ui/icons": "^4.11.2",
     "@react-hook/size": "^2.1.2",
-    "@types/react-table": "^7.7.8",
     "lodash": "^4.17.21",
-    "react": "^17.0.2",
     "react-cool-dimensions": "^2.0.7",
-    "react-dom": "^17.0.2",
     "react-responsive-modal": "^6.2.0",
     "react-table": "^7.7.0"
   },
@@ -51,6 +43,11 @@
     "@babel/preset-typescript": "^7.15.0",
     "@emotion/babel-plugin": "^11.3.0",
     "@emotion/babel-preset-css-prop": "^11.2.0",
+    "@emotion/react": "^11.4.0",
+    "@emotion/serialize": "^1.0.2",
+    "@emotion/styled": "^11.3.0",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "@storybook/addon-actions": "^6.4.19",
     "@storybook/addon-console": "^1.2.3",
     "@storybook/addon-essentials": "^6.4.19",
@@ -59,6 +56,7 @@
     "@svgr/cli": "^6.0.0",
     "@types/lodash": "^4.14.172",
     "@types/mdx": "^2.0.1",
+    "@types/react-table": "^7.7.8",
     "@typescript-eslint/eslint-plugin": "^5.12.1",
     "@typescript-eslint/parser": "^5.12.1",
     "@veupathdb/tsconfig": "^1.0.1",
@@ -68,9 +66,19 @@
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "eslint-plugin-storybook": "^0.5.7",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "typescript": "^4.3.5"
   },
-  "peerDependencies": {},
+  "peerDependencies": {
+    "@emotion/react": "^11.4.0",
+    "@emotion/serialize": "^1.0.2",
+    "@emotion/styled": "^11.3.0",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
+  },
   "volta": {
     "node": "16.14.0",
     "yarn": "1.22.4"
