--- a/packages/libs/coreui/package.json
+++ b/packages/libs/coreui/package.json
@@ -71,13 +71,12 @@
     "typescript": "^4.3.5"
   },
   "peerDependencies": {
-    "@emotion/react": "^11.4.0",
+    "@emotion/react": "^11.7.0",
     "@emotion/serialize": "^1.0.2",
-    "@emotion/styled": "^11.3.0",
+    "@emotion/styled": "^11.7.0",
     "@material-ui/core": "^4.12.3",
-    "@material-ui/icons": "^4.11.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "@material-ui/icons": "^4.12.3",
+    "react": ">=16.14"
   },
   "volta": {
     "node": "16.14.0",
