--- a/packages/libs/wdk-client/package.json
+++ b/packages/libs/wdk-client/package.json
@@ -81,7 +81,6 @@
     "npm-run-all": "^4.1.5",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-test-renderer": "^16.9.0",
     "shelljs": "^0.8.4",
@@ -92,9 +91,7 @@
   },
   "peerDependencies": {
     "@veupathdb/components": "^0.11.8",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-router": "^5.1.2",
+    "react": ">=16.14",
     "react-router-dom": "^5.1.2"
   },
   "jest": {
