Update peerDependencies versions

--- a/packages/libs/web-common/package.json
+++ b/packages/libs/web-common/package.json
@@ -32,7 +32,8 @@
   "peerDependencies": {
     "@veupathdb/components": "^0.11.23",
     "@veupathdb/eda": "^1.7.8",
-    "@veupathdb/wdk-client": ">=0.5.4"
+    "@veupathdb/wdk-client": ">=0.5.4",
+    "react": ">=16.14"
   },
   "devDependencies": {
     "@types/node": "^14.14.7",
