--- a/packages/libs/eda/package.json
+++ b/packages/libs/eda/package.json
@@ -14,19 +14,17 @@
     "uuid": "^8.3.2"
   },
   "peerDependencies": {
-    "@emotion/react": "^11.4.1",
-    "@emotion/styled": "^11.3.0",
-    "@material-ui/core": "^4.11.3",
-    "@material-ui/icons": "^4.11.2",
+    "@emotion/react": "^11.7.0",
+    "@emotion/styled": "^11.7.0",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.12.3",
     "@material-ui/lab": "^4.0.0-alpha.58",
     "@veupathdb/components": "^0.11.27",
     "@veupathdb/coreui": "^0.13.0",
     "@veupathdb/http-utils": "^1.1.0",
     "@veupathdb/study-data-access": "^0.2.0",
     "@veupathdb/wdk-client": ">=0.5.11",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-router": "^5.2.1",
+    "react": ">=16.14",
     "react-router-dom": "^5.3.0"
   },
   "sideEffects": [
