--- a/packages/libs/eda/package.json
+++ b/packages/libs/eda/package.json
@@ -25,6 +25,7 @@
     "@veupathdb/study-data-access": "^0.2.0",
     "@veupathdb/wdk-client": ">=0.5.11",
     "react": ">=16.14",
+    "react-dom": ">=16.14",
     "react-router-dom": "^5.3.0"
   },
   "sideEffects": [
