--- a/packages/libs/wdk-client/package.json
+++ b/packages/libs/wdk-client/package.json
@@ -92,6 +92,7 @@
   "peerDependencies": {
     "@veupathdb/components": "^0.11.8",
     "react": ">=16.14",
+    "react-dom": ">=16.14",
     "react-router-dom": "^5.1.2"
   },
   "jest": {
