--- a/packages/configs/react-scripts/package.json
+++ b/packages/configs/react-scripts/package.json
@@ -19,7 +19,8 @@
     "url": "https://github.com/VEuPathDB/web-dev/issues"
   },
   "dependencies": {
-    "dotenv": "^8.2.0",
+    "dotenv": "^10.0.0",
+    "dotenv-expand": "^5.1.0",
     "fs-extra": "^9.1.0",
     "react-app-rewired": "^2.1.8",
     "read": "^1.0.7",
