--- a/packages/libs/coreui/package.json
+++ b/packages/libs/coreui/package.json
@@ -16,6 +16,7 @@
     "build-storybook": "build-storybook",
     "build": "rm -rf dist && NODE_ENV=production babel src --ignore \"src/stories/**/*\" --out-dir dist --extensions \".ts,.tsx\" ",
     "tsc": "tsc",
+    "build-npm-modules": "npm-run-all build tsc",
     "create-svg-icons": "npx @svgr/cli --icon --replace-attr-values \"#000000=currentColor\" --out-dir src/components/icons/ src/assets/svg/ --typescript",
     "chromatic": "npx chromatic --project-token=52342b8693f6"
   },
@@ -66,6 +67,7 @@
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "eslint-plugin-storybook": "^0.5.7",
+    "npm-run-all": "^4.1.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "typescript": "^4.3.5"
@@ -75,7 +77,7 @@
     "@emotion/serialize": "^1.0.2",
     "@emotion/styled": "^11.7.0",
     "@material-ui/core": "^4.12.3",
-    "@material-ui/icons": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "react": ">=16.14"
   },
   "volta": {
