--- a/packages/libs/web-common/package.json
+++ b/packages/libs/web-common/package.json
@@ -38,16 +38,30 @@
     "react-dom": ">=16.14"
   },
   "devDependencies": {
+    "@emotion/react": "^11.7.0",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.57",
+    "@types/jqueryui": "^1.12.16",
     "@types/node": "^14.14.7",
+    "@types/react": "^17.0.43",
+    "@types/react-dom": "^17.0.14",
+    "@types/react-router": "^5.1.18",
+    "@types/react-router-dom": "^5.3.3",
     "@types/shelljs": "^0.8.8",
-    "@veupathdb/components": "^0.11.23",
+    "@veupathdb/components": "^0.13.0",
+    "@veupathdb/coreui": "^0.16.0",
     "@veupathdb/eda": "^1.7.8",
     "@veupathdb/react-scripts": "^1.2.0",
-    "@veupathdb/wdk-client": "^0.5.7",
+    "@veupathdb/wdk-client": "^0.6.0",
     "bubleify": "^2.0.0",
     "icon-font-generator": "^2.1.11",
     "ify-loader": "^1.1.0",
     "npm-run-all": "^4.1.5",
+    "react": "16",
+    "react-dom": "16",
+    "react-router": "5",
+    "react-router-dom": "5",
     "shelljs": "^0.8.4",
     "ts-node": "^9.0.0",
     "typescript": "3.7"
