--- a/packages/libs/eda/package.json
+++ b/packages/libs/eda/package.json
@@ -66,6 +66,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/react-hooks": "^5.0.3",
     "@testing-library/user-event": "^12.1.10",
+    "@types/date-arithmetic": "^4.1.1",
     "@types/debounce-promise": "^3.1.3",
     "@types/jest": "^26.0.15",
     "@types/lodash": "^4.14.168",
