add missing dev dependencies

--- a/packages/libs/eda/package.json
+++ b/packages/libs/eda/package.json
@@ -74,11 +74,13 @@
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
     "@types/react-resizable": "^1.7.2",
+    "@types/react-router-dom": "^5.3.3",
     "@types/react-table": "^7.7.9",
     "@types/uuid": "^8.3.0",
     "@veupathdb/browserslist-config": "^1.0.0",
     "@veupathdb/components": "^0.13.0",
     "@veupathdb/coreui": "^0.16.0",
+    "@veupathdb/eda": "^1.8.5",
     "@veupathdb/eslint-config": "^1.0.0",
     "@veupathdb/http-utils": "^1.1.0",
     "@veupathdb/prettier-config": "^1.0.0",
