--- a/packages/sites/mbio-site/package.json
+++ b/packages/sites/mbio-site/package.json
@@ -14,7 +14,8 @@
     "@veupathdb/eda": "^1.8.3",
     "@veupathdb/study-data-access": "^0.2.0",
     "@veupathdb/wdk-client": "^0.5.11",
-    "@veupathdb/web-common": "^0.3.0"
+    "@veupathdb/web-common": "^0.3.0",
+    "core-js": "^3.21.1"
   },
   "resolutions": {
     "react": "16",
