add dependency of react-router-dom

--- a/packages/sites/mbio-site/package.json
+++ b/packages/sites/mbio-site/package.json
@@ -15,7 +15,8 @@
     "@veupathdb/study-data-access": "^0.2.0",
     "@veupathdb/wdk-client": "^0.5.11",
     "@veupathdb/web-common": "^0.3.0",
-    "core-js": "^3.21.1"
+    "core-js": "^3.21.1",
+    "react-router-dom": "^5.3.0"
   },
   "resolutions": {
     "react": "16",
