--- a/packages/sites/mbio-site/package.json
+++ b/packages/sites/mbio-site/package.json
@@ -9,17 +9,32 @@
   "author": "",
   "license": "Apache-2.0",
   "dependencies": {
-    "@veupathdb/wdk-client": "^0.5.4",
-    "@veupathdb/web-common": "^0.2.1",
-    "core-js": "^3.21.1"
-  },
-  "resolutions": {
+    "@emotion/react": "^11.7.0",
+    "@emotion/styled": "^11.7.0",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.58",
+    "@veupathdb/components": "^0.13.0",
+    "@veupathdb/coreui": "^0.16.0",
+    "@veupathdb/eda": "^2.0.0",
+    "@veupathdb/http-utils": "^1.1.0",
+    "@veupathdb/study-data-access": "^0.3.0",
+    "@veupathdb/wdk-client": "^0.6.1",
+    "@veupathdb/web-common": "^0.4.1",
+    "core-js": "^3.21.1",
+    "jquery": "1.9.1",
+    "popper.js": "^1.16.1",
     "react": "16",
     "react-dom": "16",
-    "@types/react": "16",
-    "@types/react-dom": "16"
+    "react-router-dom": "5",
+    "react-spring": "^8.0.27"
   },
   "devDependencies": {
+    "@babel/core": "^7.0.0",
+    "@emotion/serialize": "^1.0.2",
+    "@types/react": "16",
+    "@types/react-dom": "16",
+    "@types/react-router-dom": "5",
     "bubleify": "^2.0.0",
     "ify-loader": "^1.1.0"
   }
