--- a/packages/libs/web-common/package.json
+++ b/packages/libs/web-common/package.json
@@ -39,6 +39,8 @@
   },
   "devDependencies": {
     "@emotion/react": "^11.7.0",
+    "@emotion/serialize": "^1.0.2",
+    "@emotion/styled": "^11.7.0",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
@@ -52,7 +54,9 @@
     "@veupathdb/components": "^0.14.4",
     "@veupathdb/coreui": "^0.16.0",
     "@veupathdb/eda": "^2.1.8",
+    "@veupathdb/http-utils": "^1.1.0",
     "@veupathdb/react-scripts": "^1.2.0",
+    "@veupathdb/study-data-access": "^0.3.0",
     "@veupathdb/wdk-client": "^0.6.7",
     "bubleify": "^2.0.0",
     "icon-font-generator": "^2.1.11",
