Tweak localservices config template to show support for microbiome

--- a/packages/libs/eda/.env.local.sample.localservices
+++ b/packages/libs/eda/.env.local.sample.localservices
@@ -2,10 +2,10 @@
 VEUPATHDB_LOGIN_USER=apidb
 VEUPATHDB_LOGIN_PASS=***********
 
-BASE_WDK_URL=https://qa.clinepidb.org
-BASE_EDA_URL=http://localhost
+WDK_SERVICE_URL=https://qa.clinepidb.org/ce/service
+#WDK_SERVICE_URL=https://feature.microbiomedb.org/mbio.feature
 
-WDK_SERVICE_URL=$BASE_WDK_URL/ce/service
+BASE_EDA_URL=http://localhost
 
 EDA_DATA_SERVICE_URL=${BASE_EDA_URL}:8082
 EDA_SUBSETTING_SERVICE_URL=${BASE_EDA_URL}:8080
