--- a/packages/libs/eda/.env.local.sample.localservices
+++ b/packages/libs/eda/.env.local.sample.localservices
@@ -3,7 +3,7 @@ VEUPATHDB_LOGIN_USER=apidb
 VEUPATHDB_LOGIN_PASS=***********
 
 WDK_SERVICE_URL=https://qa.clinepidb.org/ce/service
-#WDK_SERVICE_URL=https://feature.microbiomedb.org/mbio.feature
+#WDK_SERVICE_URL=https://feature.microbiomedb.org/mbio.feature/service
 
 BASE_EDA_URL=http://localhost
 
