use a wider version range for web-eda

--- a/packages/libs/web-common/package.json
+++ b/packages/libs/web-common/package.json
@@ -32,7 +32,7 @@
   },
   "peerDependencies": {
     "@veupathdb/components": "^0.14.4",
-    "@veupathdb/eda": "^2.1.8",
+    "@veupathdb/eda": ">=2.1.8",
     "@veupathdb/wdk-client": ">=0.6.7",
     "react": ">=16.14",
     "react-dom": ">=16.14"
