--- a/packages/sites/mbio-site/package.json
+++ b/packages/sites/mbio-site/package.json
@@ -15,20 +15,17 @@
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.58",
-    "@veupathdb/components": "^0.14.4",
+    "@veupathdb/components": "0.14.4",
     "@veupathdb/coreui": "^0.16.0",
-    "@veupathdb/eda": "^3.0.0",
+    "@veupathdb/eda": "^3.1.0",
     "@veupathdb/http-utils": "^1.1.0",
     "@veupathdb/study-data-access": "^0.3.1",
     "@veupathdb/wdk-client": "^0.6.7",
-    "@veupathdb/web-common": "^0.4.4",
+    "@veupathdb/web-common": "^0.5.0",
     "core-js": "^3.21.1",
-    "jquery": "1.9.1",
-    "popper.js": "^1.16.1",
     "react": "16",
     "react-dom": "16",
-    "react-router-dom": "^5.3.0",
-    "react-spring": "^8.0.27"
+    "react-router-dom": "^5.3.0"
   },
   "resolutions": {
     "react": "16",
