--- a/packages/configs/cra-template/template/.env.local.example
+++ b/packages/configs/cra-template/template/.env.local.example
@@ -3,4 +3,4 @@ HTTPS=true
 VEUPATHDB_LOGIN_USER=apidb
 VEUPATHDB_LOGIN_PASS=************
 
-WDK_SERVICE_URL=https://qa.plasmodb.org/plasmo/service
+WDK_SERVICE_URL=https://qa.veupathdb.org/veupathdb/service
