--- a/packages/configs/base-webpack-config/package.json
+++ b/packages/configs/base-webpack-config/package.json
@@ -10,5 +10,33 @@
   },
   "files": [
     "index.js"
-  ]  
+  ],
+  "peerDependencies": {
+    "css-loader": "^2.1.1",
+    "mini-css-extract-plugin": "^0.6.0",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^7.1.0",
+    "script-loader": "^0.7.2",
+    "source-map-loader": "^1.1.2",
+    "ts-loader": "^5.4.5",
+    "typescript": "3.7",
+    "url-loader": "^1.1.2",
+    "webpack": "^4.46.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-merge": "^4.2.1"
+  },
+  "devDependencies": {
+    "css-loader": "^2.1.1",
+    "mini-css-extract-plugin": "^0.6.0",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^7.1.0",
+    "script-loader": "^0.7.2",
+    "source-map-loader": "^1.1.2",
+    "ts-loader": "^5.4.5",
+    "typescript": "3.7",
+    "url-loader": "^1.1.2",
+    "webpack": "^4.46.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-merge": "^4.2.1"
+  }
 }
