--- a/packages/configs/base-webpack-config/package.json
+++ b/packages/configs/base-webpack-config/package.json
@@ -12,7 +12,10 @@
     "index.js"
   ],
   "peerDependencies": {
+    "@babel/core": "^7.0.0",
+    "babel-loader": "^8.0.5",
     "css-loader": "^2.1.1",
+    "file-loader": "^3.0.1",
     "mini-css-extract-plugin": "^0.6.0",
     "node-sass": "^4.12.0",
     "sass-loader": "^7.1.0",
@@ -26,7 +29,10 @@
     "webpack-merge": "^4.2.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.0.0",
+    "babel-loader": "^8.0.5",
     "css-loader": "^2.1.1",
+    "file-loader": "^3.0.1",
     "mini-css-extract-plugin": "^0.6.0",
     "node-sass": "^4.12.0",
     "sass-loader": "^7.1.0",
