--- a/packages/sites/mbio-site/package.json
+++ b/packages/sites/mbio-site/package.json
@@ -15,12 +15,12 @@
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.58",
-    "@veupathdb/components": "0.14.4",
+    "@veupathdb/components": "^0.15.3",
     "@veupathdb/coreui": "^0.16.0",
-    "@veupathdb/eda": "^3.1.0",
+    "@veupathdb/eda": "^3.2.9",
     "@veupathdb/http-utils": "^1.1.0",
     "@veupathdb/study-data-access": "^0.3.1",
-    "@veupathdb/wdk-client": "^0.6.7",
+    "@veupathdb/wdk-client": "^0.6.9",
     "@veupathdb/web-common": "^0.5.0",
     "core-js": "^3.21.1",
     "react": "16",
