--- a/packages/configs/site-babel-config/package.json
+++ b/packages/configs/site-babel-config/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@veupathdb/site-babel-config",
   "version": "0.1.0",
-  "main": "index.js",
+  "main": ".babelrc",
   "license": "Apache-2.0",
   "repository": {
     "type": "git",
@@ -9,7 +9,7 @@
     "directory": "packages/site-babel-config"
   },
   "files": [
-    "index.js"
+    ".babelrc"
   ],
   "devDependencies": {
     "@babel/cli": "^7.4.4",
