--- a/packages/configs/site-babel-config/.babelrc
+++ b/packages/configs/site-babel-config/.babelrc
@@ -11,6 +11,8 @@
     ]
   ],
   "plugins": [
+    "@babel/plugin-proposal-optional-chaining",
+    "@babel/plugin-proposal-nullish-coalescing-operator",
     "@babel/plugin-syntax-dynamic-import"
   ]
 }
