--- a/packages/sites/mbio-site/package.json
+++ b/packages/sites/mbio-site/package.json
@@ -1,13 +1,17 @@
 {
-  "name": "clinepi-website",
+  "name": "mbio-website",
   "version": "0.1.0",
   "description": "",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "veupathdb-react-scripts run-site-dev-server --config webpack.config.local.mjs --port 3000"
   },
   "keywords": [],
   "author": "",
   "license": "Apache-2.0",
+  "browserslist": [
+    "extends @veupathdb/browserslist-config"
+  ],
   "dependencies": {
     "@emotion/react": "^11.7.0",
     "@emotion/styled": "^11.7.0",
@@ -30,12 +34,37 @@
     "react-spring": "^8.0.27"
   },
   "devDependencies": {
+    "@babel/cli": "^7.4.4",
     "@babel/core": "^7.0.0",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.0.0",
     "@emotion/serialize": "^1.0.2",
     "@types/react": "16",
     "@types/react-dom": "16",
     "@types/react-router-dom": "5",
+    "@veupathdb/base-webpack-config": "^0.1.0",
+    "@veupathdb/browserslist-config": "^1.1.0",
+    "@veupathdb/react-scripts": "^2.0.0",
+    "@veupathdb/site-babel-config": "^0.1.0",
+    "@veupathdb/site-tsconfig": "^0.1.0",
+    "@veupathdb/site-webpack-config": "^0.1.0",
+    "babel-loader": "^8.0.5",
     "bubleify": "^2.0.0",
-    "ify-loader": "^1.1.0"
+    "css-loader": "^2.1.1",
+    "file-loader": "^3.0.1",
+    "html-webpack-plugin": "^4.5.2",
+    "ify-loader": "^1.1.0",
+    "mini-css-extract-plugin": "^0.6.0",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^7.1.0",
+    "script-loader": "^0.7.2",
+    "source-map-loader": "^1.1.2",
+    "ts-loader": "^5.4.5",
+    "typescript": "3.7",
+    "url-loader": "^1.1.2",
+    "webpack": "^4.46.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.7.4",
+    "webpack-merge": "^4.2.1"
   }
 }
