Allow User Datasets workspace site config to be set in the local dev environment

--- a/packages/sites/mbio-site/.env.sample
+++ b/packages/sites/mbio-site/.env.sample
@@ -14,6 +14,10 @@ EDA_SERVICE_ENDPOINT=/eda
 EDA_SERVICE_URL=${BASE_PROXY_URL}/eda
 EDA_EXAMPLE_ANALYSES_AUTHOR=854899613
 
+USER_DATASETS_WORKSPACE_ENABLED=true
+USER_DATASETS_WORKSPACE_IMPORT_SERVICE_ENDPOINT=/dataset-import
+USER_DATASETS_WORKSPACE_IMPORT_SERVICE_URL=${BASE_PROXY_URL}/dataset-import
+
 DOCUMENTS_ENDPOINT=/documents
 DOCUMENTS_URL=${BASE_PROXY_URL}/documents
 
