--- a/packages/libs/eda/tsconfig.json
+++ b/packages/libs/eda/tsconfig.json
@@ -2,5 +2,8 @@
   "extends": "@veupathdb/tsconfig/tsconfig.json",
   "include": [
     "src"
-  ]
+  ],
+  "compilerOptions": {
+    "noErrorTruncation": true
+  }
 }
