--- a/packages/libs/coreui/package.json
+++ b/packages/libs/coreui/package.json
@@ -67,6 +67,7 @@
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "eslint-plugin-storybook": "^0.5.7",
+    "notistack": "^1.0.10",
     "npm-run-all": "^4.1.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
