--- a/packages/libs/wdk-client/package.json
+++ b/packages/libs/wdk-client/package.json
@@ -83,6 +83,7 @@
     "eslint-plugin-react": "^7.4.0",
     "jest": "^23.4.2",
     "jest-tap-reporter": "^1.9.0",
+    "notistack": "^1.0.10",
     "npm-run-all": "^4.1.5",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -96,6 +97,7 @@
   },
   "peerDependencies": {
     "@veupathdb/components": "^0.14.4",
+    "notistack": "^1.0.10",
     "react": ">=16.14",
     "react-dom": ">=16.14",
     "react-router-dom": "^5.1.2"
