--- a/packages/sites/mbio-site/package.json
+++ b/packages/sites/mbio-site/package.json
@@ -60,7 +60,7 @@
     "html-webpack-plugin": "^4.5.2",
     "ify-loader": "^1.1.0",
     "mini-css-extract-plugin": "^0.6.0",
-    "node-sass": "^4.12.0",
+    "sass": "^1.52.2",
     "sass-loader": "^7.1.0",
     "script-loader": "^0.7.2",
     "source-map-loader": "^1.1.2",
