--- a/packages/libs/eda/package.json
+++ b/packages/libs/eda/package.json
@@ -93,6 +93,7 @@
     "ify-loader": "^1.1.0",
     "lint-staged": ">=10",
     "node-sass": "4",
+    "notistack": "^1.0.10",
     "prettier": "2.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
