--- a/packages/sites/mbio-site/package.json
+++ b/packages/sites/mbio-site/package.json
@@ -14,26 +14,26 @@
   ],
   "dependencies": {
     "@emotion/react": "^11.7.0",
+    "@emotion/serialize": "^1.0.2",
     "@emotion/styled": "^11.7.0",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.58",
-    "@veupathdb/components": "^0.16.0",
-    "@veupathdb/coreui": "^0.16.0",
-    "@veupathdb/eda": "^3.5.23",
+    "@veupathdb/components": "^0.16.7",
+    "@veupathdb/coreui": "^0.17.2",
+    "@veupathdb/eda": "^3.6.18",
     "@veupathdb/http-utils": "^1.1.0",
-    "@veupathdb/study-data-access": "^0.3.0",
-    "@veupathdb/user-datasets": "^0.1.3",
-    "@veupathdb/wdk-client": "^0.7.2",
-    "@veupathdb/web-common": "^0.5.2",
+    "@veupathdb/study-data-access": "^0.3.3",
+    "@veupathdb/user-datasets": "^0.1.5",
+    "@veupathdb/wdk-client": "^0.8.3",
+    "@veupathdb/web-common": "^0.6.14",
     "core-js": "^3.21.1",
-    "jquery": "1.9.1",
+    "notistack": "^1.0.10",
     "popper.js": "^1.16.1",
     "react": "16",
     "react-dom": "16",
     "react-redux": "^7.1.3",
-    "react-router-dom": "5",
-    "react-spring": "^8.0.27",
+    "react-router-dom": "^5.3.0",
     "redux": "^4.0.0",
     "redux-observable": "^1.2.0",
     "rxjs": "^6.2.2"
@@ -43,7 +43,6 @@
     "@babel/core": "^7.0.0",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.0.0",
-    "@emotion/serialize": "^1.0.2",
     "@types/react": "16",
     "@types/react-dom": "16",
     "@types/react-router-dom": "5",
