--- a/packages/libs/coreui/tsconfig.json
+++ b/packages/libs/coreui/tsconfig.json
@@ -9,6 +9,9 @@
     "esModuleInterop": true,
     "strict": true,
     "target": "ES5",
+    // set downlevelIteration to true to resolve TS error regarding iterables
+    // https://stackoverflow.com/questions/49218765/typescript-and-iterator-type-iterableiteratort-is-not-an-array-type
+    "downlevelIteration": true,
     // TODO: This is for react-table only. Hopefully can be eliminated in the future.
     "skipLibCheck": true,
   },
