--- a/packages/libs/coreui/.babelrc
+++ b/packages/libs/coreui/.babelrc
@@ -7,6 +7,6 @@
         { "runtime": "automatic", "importSource": "@emotion/react" }
       ]
     ],
-    "plugins": ["@emotion/babel-plugin"]
+    "plugins": ["@emotion/babel-plugin", "react-require"]
   }
 
