--- a/packages/libs/coreui/package.json
+++ b/packages/libs/coreui/package.json
@@ -62,6 +62,7 @@
     "@typescript-eslint/parser": "^5.12.1",
     "@veupathdb/tsconfig": "^1.0.1",
     "babel-loader": "^8.2.2",
+    "babel-plugin-react-require": "^3.1.3",
     "chromatic": "^6.2.0",
     "eslint": "^8.9.0",
     "eslint-plugin-react": "^7.28.0",
