--- a/packages/libs/eda/package.json
+++ b/packages/libs/eda/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@veupathdb/eda",
-  "version": "3.7.9",
+  "version": "3.7.10",
   "dependencies": {
     "debounce-promise": "^3.1.2",
     "fp-ts": "^2.9.3",
@@ -41,7 +41,7 @@
   },
   "scripts": {
     "start": "veupathdb-react-scripts start",
-    "build": "veupathdb-react-scripts build",
+    "build": "veupathdb-react-scripts prepare",
     "test": "veupathdb-react-scripts test",
     "eject": "veupathdb-react-scripts eject",
     "build-npm-modules": "veupathdb-react-scripts prepare"
