--- a/packages/libs/eda/package.json
+++ b/packages/libs/eda/package.json
@@ -83,27 +83,33 @@
     "@veupathdb/eslint-config": "^1.0.0",
     "@veupathdb/http-utils": "^1.1.0",
     "@veupathdb/prettier-config": "^1.0.0",
-    "@veupathdb/react-scripts": "^1.0.1",
+    "@veupathdb/react-scripts": "^2.0.0",
     "@veupathdb/study-data-access": "^0.3.5",
     "@veupathdb/tsconfig": "^1.0.1",
     "@veupathdb/wdk-client": "^0.9.1",
+    "assert": "^2.0.0",
     "bubleify": "^2.0.0",
-    "http-proxy-middleware": "^1.0.6",
+    "buffer": "^6.0.3",
+    "http-proxy-middleware": "^2.0.6",
     "husky": "^4.3.8",
     "ify-loader": "^1.1.0",
     "lint-staged": ">=10",
-    "node-sass": "4",
     "notistack": "^1.0.10",
+    "path-browserify": "^1.0.1",
+    "postcss-normalize": "^10.0.1",
     "prettier": "2.2.1",
+    "querystring-es3": "^0.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router": "^5.2.1",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.1",
+    "react-scripts": "5.0.1",
     "read": "^1.0.7",
+    "sass": "^1.54.4",
     "script-loader": "^0.7.2",
     "set-cookie-parser": "^2.4.6",
     "source-map-loader": "1",
+    "stream-browserify": "^3.0.0",
     "typescript": "^4.3.4",
     "web-vitals": "^0.2.4"
   },
