--- a/packages/libs/eda/package.json
+++ b/packages/libs/eda/package.json
@@ -97,6 +97,7 @@
     "path-browserify": "^1.0.1",
     "postcss-normalize": "^10.0.1",
     "prettier": "2.2.1",
+    "process": "^0.11.10",
     "querystring-es3": "^0.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
