--- a/packages/sites/mbio-site/.env.sample
+++ b/packages/sites/mbio-site/.env.sample
@@ -18,6 +18,9 @@ USER_DATASETS_WORKSPACE_ENABLED=true
 USER_DATASETS_WORKSPACE_IMPORT_SERVICE_ENDPOINT=/dataset-import
 USER_DATASETS_WORKSPACE_IMPORT_SERVICE_URL=${BASE_PROXY_URL}/dataset-import
 
+SITE_SEARCH_SERVICE_ENDPOINT=/site-search
+SITE_SEARCH_SERVICE_URL=${BASE_PROXY_URL}/site-search
+
 DOCUMENTS_ENDPOINT=/documents
 DOCUMENTS_URL=${BASE_PROXY_URL}/documents
 
