--- a/packages/sites/mbio-site/package.json
+++ b/packages/sites/mbio-site/package.json
@@ -42,9 +42,9 @@
     "@babel/core": "^7.0.0",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.0.0",
-    "@types/react": "16",
-    "@types/react-dom": "16",
-    "@types/react-router-dom": "5",
+    "@types/react": "^17.0.43",
+    "@types/react-dom": "^17.0.14",
+    "@types/react-router-dom": "^5.3.3",
     "@veupathdb/base-webpack-config": "^0.1.0",
     "@veupathdb/browserslist-config": "^1.1.0",
     "@veupathdb/react-scripts": "^2.0.0",
@@ -58,6 +58,7 @@
     "html-webpack-plugin": "^4.5.2",
     "ify-loader": "^1.1.0",
     "mini-css-extract-plugin": "^0.6.0",
+    "relative-deps": "^1.0.7",
     "sass": "^1.52.2",
     "sass-loader": "^7.1.0",
     "script-loader": "^0.7.2",
@@ -65,9 +66,12 @@
     "ts-loader": "^5.4.5",
     "typescript": "3.7",
     "url-loader": "^1.1.2",
-    "webpack": "^4.46.0",
+    "webpack": "4.46.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4",
     "webpack-merge": "^4.2.1"
+  },
+  "relativeDependencies": {
+    "@veupathdb/web-common": "../../EbrcWebsiteCommon/Client"
   }
 }
