--- a/packages/libs/eda/package.json
+++ b/packages/libs/eda/package.json
@@ -2,6 +2,7 @@
   "name": "@veupathdb/eda",
   "version": "3.10.0",
   "dependencies": {
+    "@types/luxon": "^3.0.1",
     "debounce-promise": "^3.1.2",
     "fp-ts": "^2.9.3",
     "io-ts": "^2.2.13",
