--- a/packages/libs/web-common/package.json
+++ b/packages/libs/web-common/package.json
@@ -31,9 +31,10 @@
     "whatwg-fetch": "^3.5.0"
   },
   "peerDependencies": {
-    "@veupathdb/components": "^0.14.4",
-    "@veupathdb/eda": ">=3.0.0",
-    "@veupathdb/wdk-client": ">=0.7.0",
+    "@veupathdb/components": "^0.19.2",
+    "@veupathdb/eda": ">=3.10.6",
+    "@veupathdb/wdk-client": ">=0.9.13",
+    "notistack": "^1.0.10",
     "react": ">=16.14",
     "react-dom": ">=16.14"
   },
@@ -52,16 +53,18 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/react-table": "^7.7.11",
     "@types/shelljs": "^0.8.8",
-    "@veupathdb/components": "^0.14.4",
-    "@veupathdb/coreui": "^0.16.0",
-    "@veupathdb/eda": "^3.0.1",
+    "@veupathdb/components": "^0.19.2",
+    "@veupathdb/coreui": "^0.18.7",
+    "@veupathdb/eda": "^3.10.6",
     "@veupathdb/http-utils": "^1.1.0",
-    "@veupathdb/react-scripts": "^1.3.0",
-    "@veupathdb/study-data-access": "^0.3.0",
-    "@veupathdb/wdk-client": "^0.7.0",
+    "@veupathdb/react-scripts": "^2.0.0",
+    "@veupathdb/study-data-access": "^0.3.6",
+    "@veupathdb/user-datasets": "^0.1.12",
+    "@veupathdb/wdk-client": "^0.9.13",
     "bubleify": "^2.0.0",
     "icon-font-generator": "^2.1.11",
     "ify-loader": "^1.1.0",
+    "notistack": "^1.0.10",
     "npm-run-all": "^4.1.5",
     "react": "16",
     "react-dom": "16",
