--- a/packages/libs/eda/package.json
+++ b/packages/libs/eda/package.json
@@ -101,6 +101,7 @@
     "process": "^0.11.10",
     "querystring-es3": "^0.2.1",
     "react": "^17.0.1",
+    "react-app-rewired": "^2.2.1",
     "react-dom": "^17.0.1",
     "react-router": "^5.2.1",
     "react-router-dom": "^5.3.0",
