--- a/packages/libs/coreui/package.json
+++ b/packages/libs/coreui/package.json
@@ -75,7 +75,7 @@
     "npm-run-all": "^4.1.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "typescript": "^4.3.5"
+    "typescript": "~4.3.5"
   },
   "peerDependencies": {
     "@emotion/react": "^11.10.0",
