Upgrade typescript and configure 'skipLibCheck: true'

--- a/packages/libs/wdk-client/tsconfig.json
+++ b/packages/libs/wdk-client/tsconfig.json
@@ -23,7 +23,8 @@
     "declarationMap": true,
     "paths": {
       "wdk-client/*": [ "src/*" ]
-    }
+    },
+    "skipLibCheck": true
   },
   "include": [ "src/**/*" ]
 }
