--- a/packages/libs/wdk-client/package.json
+++ b/packages/libs/wdk-client/package.json
@@ -89,7 +89,7 @@
     "ts-jest": "^23.1.2",
     "ts-node": "^9.0.0",
     "tspath": "^1.3.7",
-    "typescript": "^3.7.5"
+    "typescript": "~4.3.5"
   },
   "peerDependencies": {
     "@veupathdb/components": "^0.19.14",
