Adjust typescript version/config and resolve compiler issues for monorepo

--- a/packages/libs/web-common/tsconfig.json
+++ b/packages/libs/web-common/tsconfig.json
@@ -26,5 +26,6 @@
       "*": [ "./node_modules/@types/*", "*" ] // prevent issues with npm/yarn link (see https://github.com/Microsoft/TypeScript/issues/11916#issuecomment-257130001)
     }
   },
+  "skipLibCheck": true,
   "include": [ "src/**/*" ]
 }
