--- a/packages/libs/web-common/package.json
+++ b/packages/libs/web-common/package.json
@@ -14,7 +14,7 @@
     "relativize": "ts-node-script ./scripts/relativize.ts lib ebrc-client",
     "generate-icons": "mkdir -p dist && icon-font-generator icons/* -o dist -n ebrc-icons -p ebrc-icon --normalize --center --csstp ./templates/icons-css.hbs",
     "build": "npm-run-all compile copy-assets relativize generate-icons",
-    "build-npm-modules": "npm-run-all build",
+    "build-npm-modules": "npm-run-all clean build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "files": [
@@ -73,6 +73,6 @@
     "react-router-dom": "5",
     "shelljs": "^0.8.4",
     "ts-node": "^9.0.0",
-    "typescript": "3.7"
+    "typescript": "~4.3.5"
   }
 }
